[project]
name = "red_teaming_agv"
version = "0.20"
description = "A red teaming agent project"
authors = [
    {name = "konit", email = "konit.block@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.6.1",
    "openai>=1.66.3",
    "naptha-sdk @ git+https://github.com/NapthaAI/naptha-sdk.git"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["red_teaming_agv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
