[project]
name = "red_teaming_agv"
version = "0.22"
description = "A Automatic AI Red-Teaming Framework that simulate adversarial attacks on AI agents to evaluate their robustness and response mechanisms."
authors = [
    {name = "konit", email = "konit.block@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.6.1",
    "openai>=1.66.3",
    "naptha-sdk @ git+https://github.com/NapthaAI/naptha-sdk.git"
]

[tool.setuptools.packages.find]
include = ["red_teaming_agv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
