[project]
name = "red_teaming_agv"
version = "0.25"
description = "A Automatic AI Red-Teaming Framework that simulate adversarial attacks on AI agents to evaluate their robustness and response mechanisms."
authors = [
    {name = "konit", email = "konit.block@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "naptha-sdk",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["red_teaming_agv"]

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
